// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detections attrs html 1`] = `
Array [
  Object {
    "end": 23,
    "fullEnd": 24,
    "fullStart": 5,
    "fullText": "placeholder=\\"hello\\"",
    "isDynamic": false,
    "start": 18,
    "text": "hello",
    "type": "attribute",
  },
]
`;

exports[`detections attrs html 2`] = `
Array [
  Object {
    "end": 117,
    "fullEnd": 118,
    "fullStart": 72,
    "fullText": "placeholder=\\"Write your article (in markdown)\\"",
    "isDynamic": false,
    "start": 85,
    "text": "Write your article (in markdown)",
    "type": "attribute",
  },
]
`;

exports[`detections attrs html 3`] = `
Array [
  Object {
    "end": 47,
    "fullEnd": 48,
    "fullStart": 25,
    "fullText": "title=\\"This is a title\\"",
    "isDynamic": false,
    "start": 32,
    "text": "This is a title",
    "type": "attribute",
  },
  Object {
    "end": 69,
    "fullEnd": 70,
    "fullStart": 49,
    "fullText": "alt=\\"This is an alt.\\"",
    "isDynamic": false,
    "start": 54,
    "text": "This is an alt.",
    "type": "attribute",
  },
]
`;

exports[`detections attrs vue-favored attrs 1`] = `
Array [
  Object {
    "end": 54,
    "fullEnd": 55,
    "fullStart": 7,
    "fullText": "v-bind:placeholder=\\"'Placeholder ' + input_name\\"",
    "isDynamic": true,
    "start": 27,
    "text": "'Placeholder ' + input_name",
    "type": "attribute",
  },
  Object {
    "end": 85,
    "fullEnd": 86,
    "fullStart": 56,
    "fullText": ":title=\\"\`\${input_name} title\`\\"",
    "isDynamic": true,
    "start": 64,
    "text": "\`\${input_name} title\`",
    "type": "attribute",
  },
]
`;

exports[`detections inline mixed text 1`] = `
Array [
  Object {
    "end": 51,
    "fullText": "Sign in",
    "start": 44,
    "text": "Sign in",
    "type": "inline",
  },
  Object {
    "end": 73,
    "fullText": "
  or
  ",
    "start": 65,
    "text": "
  or
  ",
    "type": "inline",
  },
  Object {
    "end": 120,
    "fullText": "sign up",
    "start": 113,
    "text": "sign up",
    "type": "inline",
  },
  Object {
    "end": 170,
    "fullText": "
  to add comments on this article.
",
    "start": 134,
    "text": "
  to add comments on this article.
",
    "type": "inline",
  },
]
`;

exports[`detections inline multiple lines 1`] = `
Array [
  Object {
    "end": 37,
    "fullText": "
  Using
  v-html
  directive:
  ",
    "start": 4,
    "text": "
  Using
  v-html
  directive:
  ",
    "type": "inline",
  },
]
`;

exports[`detections inline plain text 1`] = `
Array [
  Object {
    "end": 15,
    "fullText": "Popular Tags",
    "start": 3,
    "text": "Popular Tags",
    "type": "inline",
  },
]
`;

exports[`detections inline vue-favored variables 1`] = `
Array [
  Object {
    "end": 33,
    "fullText": "Using mustaches: {{ rawHtml }}",
    "start": 3,
    "text": "Using mustaches: {{ rawHtml }}",
    "type": "inline",
  },
]
`;
